--- a/bit_people/src/app/App.css
+++ b/bit_people/src/app/App.css
@@ -1,28 +1,13 @@
-.App {
-  text-align: center;
+.card-img-wrapper{
+  padding: 24px 10px;
+  
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#img {
+  border-radius: 50%;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.icon {
+  position: relative;
+  top: 5px;
 }
