--- a/bit_blog/src/index.css
+++ b/bit_blog/src/index.css
@@ -1,5 +1,12 @@
-body {
+#root {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
 }
