--- a/bit_blog/src/index.css
+++ b/bit_blog/src/index.css
@@ -5,6 +5,11 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  font-size: 20px
+}
+
+#root a {
+  font-size: 20px;
 }
 
 main {
